tests/compiler/expected/output/ParameterTypeError.shtk.txt
MODULE ParameterTypeError.shtk
ERROR in Line 8 Col 12

    foobar(2.0)
           ^
Type error, did not expect autoFloat,
expected int
